2005-03-23  Edward Hervey  <bilboed@bilboed.com>

	* docs/Makefile.am: Make doc build depend on ./configure choice

	* gnl/gnl.c, gnl/gnlcomposition.c, gnl/gnlelements.c,
	gnl/gnlgroup.c, gnl/gnlgroup.h, gnl/gnlobject.c, gnl/gnlobject.h,
	gnl/gnloperation.c, gnl/gnloperation.h, gnl/gnlsource.c,
	gnl/gnlsource.h, gnl/gnltimeline.c, gnl/gnltimeline.h:
	Modifications so that elements are registered as gst-plugins

	* gnl/Makefile.am: (plugin_LTLIBRARIES): 
	use plugin_ instead of lib_ so that it's installed in the gst-plugins
	directory

	* Makefile.am: removed useless lines
	
	* gnl/gnlobject.c: (gnl_object_get_property):
	was setting an enum instead of an int

	* configure.ac: No spaces in value assignment !!

	* test/sourcetest1.c: modified datarate of fakesrc

	* gnl/gnl*.[ch]: correction for GST_DEBUG_* functions

	* gnonlin.pc.in: updated file to correct dependencies versions

2005-03-22  Edward Hervey  <bilboed@bilboed.com>

	* configure.ac, Makefile.am, docs/libs/Makefile.am, docs/Makefile.am: 
	Added gtk-doc API documentation skeleton

	* gnl/gnl*.[ch]: updated all class files for correct *.h dependency.

	* test/sourcetest1.c, test/sourcetest2.c, test/sourcetest3.c, test/sourcetest4.c :
	converted to new API

	* test/Makefile.am: deactivated most tests
