@@ -1,3 +1,11 @@
+2005-03-24  Edward Hervey  <bilboed@bilboed.com>
+
+	* gnonlin.pc.in: more corrections from Wouter Paesen for correct
+	dependency checks
+
+	* configure.ac: (GST_PLUGIN_LDFLAGS), (GST_REQ): 
+	sanity corrections from Wouter Paesen
+
 2005-03-23  Edward Hervey  <bilboed@bilboed.com>
 
 	* docs/Makefile.am: Make doc build depend on ./configure choice
